welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: value faireCarreCouleur
   faireCarreCouleur(Color.PINK)
   ^PatternPicture:3: error: not found: value faireCarreCouleur
   faireCarreCouleur(Color.CYAN)
   ^