welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
   faireCarreCouleur(Color.PINK)
   faireCarreCouleur(Color.CYAN)
}

def marqueSol(){
  baisseBrosse()
  leveBrosse()
}

def faireCarreCouleur1(c:Color){
  setCouleurBrosse(c)
  avance()
  marqueSol()
  gauche()
  avance()
  gauche()
  avance()
  marqueSol()
  gauche()
  avance()
  gauche()
}

def faireCarreCouleur2(c:Color){
  setCouleurBrosse(c)
  marqueSol()
  avance()
  gauche()
  avance()
  marqueSol()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
}

def faireGrandCarre(){
  
}